Fix spacing issue.

--- a/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
+++ b/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
@@ -114,6 +114,10 @@ article {
         .font-size-default(.8, .2);
         //font-weight: bold;
     }
+
+    p:first-child {
+        .font-size-default(1, 1);
+    }
 }
 
 // PYGMENTS / CODE
